# ion_propulsion

./: .gitignore  CITATION.cff  CMakeLists.txt  Makefile  Mesh.cc  NOTES.md  README  README.md  cmake_install.cmake  config.yaml  constants.yaml  data_setup  main.cpp
docs/: Andamento_errori.m  Gesicherte Terminal-Ausgabe Refine_optimize.txt  References_code-tutorials  Rg_visualize.asv  Rg_visualize.m  Tutorials_index  code_structure.txt
gmsh_grids/: BigMesh  BigMesh.msh  BigMeshNaca.geo  Functions.geo  OLDcustom_ground_mesh  ProvaTroncatoBoundaryIDs.msh  TroncatoBoundaryIDs  TroncatoBoundaryIDs.msh  circular_mesh.msh  custom_ground_mesh  custom_ground_mesh.msh  mesh_change_collector.msh  mesh_defalco  mesh_defalco.msh  mesh_defalco_100mu.geo  mesh_defalco_100mu.msh  mesh_defalco_lasca  mesh_defalco_lasca.msh  mesh_defalco_m.msh  mesh_punta.msh  mesh_punta_lasca.geo  mesh_punta_lasca.msh  multimesh2.geo  multimesh2.msh  multimeshNaca
gmsh_grids/old_grids/: custom_ground_mesh.msh  multimesh2  wrong_BigMesh  wrong_BigMesh.msh
include/: CSVLogger.h  Constants.h  Data.h  DirichletBoundaryValuesDX.h  DualFunctional.h  Evaluation.h  Framework.h  GetPot  GoalOrientedEstimator.h  GridForge.h  HelperFunctions.h  LaplaceSolver.h  Problem.h  README  Refinement.h  dual_functional.h  globals.h  includes&parameters_setup.h  includes.h  matplotlibcpp.h  postprocessors.h  problem.h  rhs&uex_functions.h  utilities.h
mesh/: Circular-step-14.geo  Circular-step-14.msh  FullTestSquare.geo  FullTestSquare.msh  LogCircular_1_10-B.geo  LogCircular_1_10-B.msh  LogCircular_1_10.msh  LogCircular_1_100-B.geo  LogCircular_1_100-B.msh  LogCircular_1_100.msh  MeshDeFalco.msh  MeshDeFalco2.geo  MeshDeFalco2.msh  TestSquare.geo  TestSquare.msh  TinyStep14.msh  TinyStep14_1_99.geo  TinyStep14_1_99.msh  cerchi_concentrici.geo  cerchi_concentrici.msh  cerchi_concentrici_1_100.geo  circular_mesh.msh  myWW.geo  myWW.msh  myWW2.geo  myWW2.msh  prova.geo  prova.msh  rectangular_mesh2.geo  rectangular_structured_mesh  rectangular_structured_mesh.geo  rectangular_structured_mesh.msh  rectangular_unstructured_mesh.geo  rectangular_unstructured_mesh.msh  simpler_rectangular_structured_mesh.geo  simpler_rectangular_structured_mesh.msh
mesh_storage/: README
postprocessing/: comparison-ManualLifting-vs-AutomaticBC.ipynb  convergence_plots.ipynb  error_convergence_plots.ipynb  functions_trials.m  lifting_function_plotter.ipynb  paraview_ExactRgGradient_ProgrammableFilter.py  plots.ipynb  step14_plots.ipynb
results/: README  solution-0.vtu  solution-1.vtu
src/: CMakeLists.txt  CompleteCode.cc  Constants.cpp  Data.cpp  DirichletBoundaryValuesDX.cpp  DirichletBoundaryValuesDX.h  DualFunctional.cpp  Evaluation.cpp  Evaluation.h  Framework.cpp  Functions.h  GridForge.cpp  HelperFunctions.cpp  LaplaceSolver.cpp  Manifold.h  OLD_main.cpp  Problem.cpp  Problem.h  Refinement.cpp  UNUSED_Mesh.cc  dual_functional.cpp  global.cpp  includes&parameters_setup.h  ion_propulsion.cpp  main.cpp  problem.cpp  problem_convergence.cpp  problem_error_refinement.cpp  problem_solver.cpp  utilities.cpp
src/.unused_code/: GetPot  snippets_of_useful_code.cpp
src/.unused_code/Foundamentals/: Base.h  DualFunctional.cpp  ErrorController.cpp  Evaluate_Rg.h  HelperFunctions.cpp  PrimalSolver.cpp  PrimalSolver.h  Solver.cpp  Solver.h
src/.unused_code/Mesh/: GridForge.h
src/Foundamentals/: Base.h  DirichletBoundaryValuesDX.h  DualFunctional.cpp  DualFunctional.h  DualSolver.h  ErrorController.cpp  ErrorController.h  ErrorController_2  ErrorController_originale  ErrorEstimate.h  Evaluate_Rg.h  Framework.cpp  Framework.h  HelperFunctions.cpp  HelperFunctions.h  OLD_SolverBase.cpp  OLD_SolverBase.h  PrimalSolver.cpp  PrimalSolver.h  Problem.cpp  Problem.h  Solver.cpp  Solver.h  SolverBase.cpp  SolverBase.h  WeightedResidual.h
src/GoalOrientedEsimator/: GOE_Data.h  GOE_DualFunctional.h  GOE_Evaluation.h  GOE_Framework.h  GOE_LaplaceSolver.h  GoalOrientedEstimator.h
src/Mesh/: GridForge.cpp  GridForge.h
tests/test-10_LogCircular-1-100-fluxGO-more/: config-1.yaml  plots.ipynb
tests/test-11_unstructured_rectangle-1-99/: config.yaml  plots.ipynb
tests/test-12_rectangle-forcing/: config-1-step14-global.yaml  config-2-step14-GO.yaml  config-3-rectangle_1_99-global.yaml  plots.ipynb
tests/test-13_angle-step14-forcing/: config-1-angle_step14-global.yaml  config-2-step14-GO.yaml  plots.ipynb
tests/test-14_angle-rectangle_1_100-forcing/: config-1-global.yaml  config-2-GO.yaml  config-3-GO-optimize.yaml  config-4-unstructured-glob_ref.yaml  config-5-unstructured-GO.yaml  config-6-unstructured-GO_optimize.yaml
tests/test-15_circular-step14/: config-1-global.yaml  config-10-iso-fullManif-global_estimate.yaml  config-11-iso-fullManif-GO.yaml  config-12-iso-fullManif-GO-optimize.yaml  config-2-global_estimate.yaml  config-3-GO.yaml  config-4-GO-optimize.yaml  config-5-fullManif-global.yaml  config-6-fullManif-global_estimate.yaml  config-7-fullManif-GO.yaml  config-8-fullManif-GO-optimize.yaml  config-9-iso-fullManif-global.yaml  plots.ipynb
tests/test-16-LogCircular-1-2/: config-1-iso-global.yaml  config-2-iso-pGO.yaml  config-3-iso-pGO-concentric.yaml  config-4-basis-global.yaml  config-5-basis-fGO.yaml  config-6-FlatManif-global.yaml  config-6a-FlatManif-global-estiamte.yaml  config-7-FlatManif-fGO.yaml  plots.ipynb
tests/test-17-NACA/: config-1-global.yaml  config-2-fGO.yaml  plots.ipynb
tests/test-18-WireWire/: config-1-global.yaml  config-10b-myWWdelaunay3-MappingQ2-TransfM3-fGO.yaml  config-11-myWWdelaunay3-MappingQ2-TransfM3-concentric.yaml  config-12-myWWdelaunay3-MappingQ2-FlatM-global.yaml  config-13-myWWdelaunay3-MappingQ2-FlatM-fGO.yaml  config-14-myWWdelaunay3-MappingQ2-FlatM-concentric.yaml  config-2-fGO.yaml  config-3-myWW-MappingQ2-TransfM3-global.yaml  config-4-myWW-MappingQ2-TransfM3-fGO.yaml  config-5-myWW5-MappingQ2-TransfM1-global BUCHI.yaml  config-6-myWW5-MappingQ2-TransfM1-fGO BUCHI.yaml  (+4 more)
zSecond_grid/: CMakeCache.txt  CMakeLists.txt  Makefile  circular_mesh.vtu  cmake_install.cmake  second_grid  second_grid.cpp
(+81 files in other folders)
